[project]
name = "spiking-neural-networks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brax>=0.14.0",
    "jax[cuda12]>=0.8.2",
    "matplotlib>=3.10.8",
    "mujoco-mjx>=3.4.0",
    "numpy>=2.3.4",
    "optax>=0.2.4",
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "warp>=1.0.4",
    "warp-lang>=1.11.0",
]
